[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[package]
name = "transgender"
version = "1.5.1"
edition = "2021"

[dependencies]
libc = "0.2"
regex-lite = "0.1.6"
